Add /about/edited page for moderators
This page shows the most recently edited items in the subreddit. Items
are added to this page using the same conditions as deciding whether to
show the "edited asterisk".

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6362,6 +6362,7 @@ dd { margin-left: 20px;  }
 .icon-menu .reddit-traffic:before,
 .icon-menu .reddit-reported:before,
 .icon-menu .reddit-spam:before,
+.icon-menu .reddit-edited:before,
 .icon-menu .wikiaction-pages:before,
 .icon-menu .wikiaction-revisions:before,
 .icon-menu .reddit-ban:before,
@@ -6443,6 +6444,10 @@ dd { margin-left: 20px;  }
 }
 .icon-menu .reddit-unmoderated:before {
     background-image: url(../reddit_unmoderated.png); /* SPRITE */
+    margin-left: 1px;
+}
+.icon-menu .reddit-edited:before {
+    background-image: url(../reddit_edited.png); /* SPRITE */
     margin-left: 1px;
 }
 .icon-menu .reddit-moderators:before {
