Fix interests label on edit_promo form.

--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -360,7 +360,7 @@
                checked="checked">
         <div class="label-group">
 
-          <span class="label">${_("interests" if c.user_is_sponsor else "frontpage")}</span>
+          <span class="label">${_("interests")}</span>
           <small class="label">${_("targets a collection of similar subreddits")}</small>
         </div>
       </label>
