Only send a full referrer URL when it's unlikely to be leaky
Links and anchors within comments on public SRs will now send
a full URL for the referrer, regardless of whether the navigation
was https -> http.

--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -33,6 +33,7 @@
     <title>${self.Title()}</title>
     <meta name="keywords" content="${self.keywords()}" />
     <meta name="description" content="${getattr(thing, 'short_description', None) or g.short_description}" />
+    <meta name="referrer" content="${c.referrer_policy}">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     ${self.viewport()}
     ${self.robots()}
