utils.md: Allow passthrough kwargs.

--- a/r2/r2/templates/utils.html
+++ b/r2/r2/templates/utils.html
@@ -553,8 +553,8 @@ ${unsafe(txt)}
   %endif
 </%def>
 
-<%def name="md(text, wrap=False)">
-  ${unsafe(safemarkdown(text, wrap=wrap))}
+<%def name="md(text, wrap=False, **kwargs)">
+  ${unsafe(safemarkdown(text, wrap=wrap, **kwargs))}
 </%def>
 
 <%def name="_md(text, wrap=False)">
