--- a/r2/r2/templates/morechildren.html
+++ b/r2/r2/templates/morechildren.html
@@ -25,8 +25,6 @@
  %>
 <%inherit file="comment_skeleton.html"/>
 
-<%def name="collapsed()">
-</%def>
 
 <%def name="commentBody()">
 <%
@@ -48,7 +46,7 @@ ${_("load more comments")}
 <%def name="buttons()">
 </%def>
 
-<%def name="tagline(collapse=False)">
+<%def name="tagline()">
 </%def>
 
 <%def name="midcol(cls = '')">
