--- a/r2/r2/templates/morerecursion.html
+++ b/r2/r2/templates/morerecursion.html
@@ -22,8 +22,6 @@
 
 <%inherit file="comment_skeleton.html"/>
 
-<%def name="collapsed()">
-</%def>
 
 <%def name="commentBody()">
 <span class="deepthread"><a href="${thing.parent_permalink}">${_("continue this thread")}</a></span>
@@ -35,7 +33,7 @@
 <%def name="buttons()">
 </%def>
 
-<%def name="tagline(collapse=False)">
+<%def name="tagline()">
 </%def>
 
 <%def name="midcol(cls='')">
