--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -406,7 +406,7 @@
         ${thing.subreddit_selector}
       </div>
     </div>
-    <div class="select-group">
+    <div class="select-group geotargeting-group">
       <span class="label">location</span>
       <div class="geotargeting-disabled" style="display:none">
         ${_("location targeting is only available when targeting the frontpage")}
